# ProjectVale

./: .gitignore  CMakeLists.txt  README.md
src/: DataLoader.cpp  DataLoader.h  NeuralNetwork.cpp  NeuralNetwork.h  main.cpp
